[gd_scene load_steps=31 format=2]

[ext_resource path="res://scene/counter.png" type="Texture" id=1]
[ext_resource path="res://scene/table.png" type="Texture" id=2]
[ext_resource path="res://scene/hanging_plant.png" type="Texture" id=3]
[ext_resource path="res://scene/bg.png" type="Texture" id=4]
[ext_resource path="res://scene/outside.png" type="Texture" id=5]
[ext_resource path="res://scene/potted_plant_01.png" type="Texture" id=6]
[ext_resource path="res://scene/littleBlackPixels.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scene/Clock.gd" type="Script" id=8]
[ext_resource path="res://scene/companions/elvira/Elveira.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/chair_left.png" type="Texture" id=10]
[ext_resource path="res://scene/potted_plant_02.png" type="Texture" id=11]
[ext_resource path="res://scene/chair_right.png" type="Texture" id=12]
[ext_resource path="res://scene/lamp.png" type="Texture" id=13]
[ext_resource path="res://scene/tree.png" type="Texture" id=14]
[ext_resource path="res://scene/companions/maia/Maia.tscn" type="PackedScene" id=15]
[ext_resource path="res://scene/ChairsUp.gd" type="Script" id=16]
[ext_resource path="res://scene/yuuki/Yuuki.tscn" type="PackedScene" id=17]
[ext_resource path="res://scene/cats/black/BlackCat.tscn" type="PackedScene" id=18]
[ext_resource path="res://scene/catbed_01.png" type="Texture" id=40]
[ext_resource path="res://Main.gd" type="Script" id=45]
[ext_resource path="res://scene/companions/chie/Chie.tscn" type="PackedScene" id=51]
[ext_resource path="res://DebugPanel.gd" type="Script" id=52]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.0901961, 0.12549, 0.219608, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.458824, 0.141176, 0.219608, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.458824, 0.141176, 0.219608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.141176, 0.0823529, 0.152941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.458824, 0.141176, 0.219608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.905882, 0.835294, 0.701961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.458824, 0.141176, 0.219608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.458824, 0.141176, 0.219608, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.458824, 0.141176, 0.219608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.905882, 0.835294, 0.701961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.141176, 0.0823529, 0.152941, 1 )
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )
Button/colors/font_color = Color( 0.921569, 0.929412, 0.913725, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0.905882, 0.835294, 0.701961, 1 )
Button/colors/font_color_pressed = Color( 0.0627451, 0.0784314, 0.121569, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 13 )
Button/styles/normal = SubResource( 13 )
Button/styles/pressed = SubResource( 14 )
CheckButton/colors/font_color = Color( 0.921569, 0.929412, 0.913725, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_focus = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 0
CheckButton/fonts/font = null
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
Label/colors/font_color = Color( 0.921569, 0.929412, 0.913725, 1 )
Label/colors/font_color_shadow = Color( 0.0901961, 0.12549, 0.219608, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 2
Label/constants/shadow_offset_y = 2
Label/fonts/font = null
Label/styles/normal = null
OptionButton/colors/font_color = Color( 0.458824, 0.141176, 0.219608, 1 )
OptionButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_focus = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_hover = Color( 0.678431, 0.466667, 0.341176, 1 )
OptionButton/colors/font_color_pressed = Color( 0.921569, 0.929412, 0.913725, 1 )
OptionButton/constants/arrow_margin = 0
OptionButton/constants/hseparation = 0
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = null
OptionButton/styles/focus = null
OptionButton/styles/hover = SubResource( 11 )
OptionButton/styles/normal = SubResource( 11 )
OptionButton/styles/pressed = SubResource( 12 )
Panel/styles/panel = SubResource( 8 )
PanelContainer/styles/panel = SubResource( 8 )
SpinBox/icons/updown = null

[node name="Scene" type="Node"]
script = ExtResource( 45 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_left = -1.0
margin_top = 5.0
margin_right = -7.0
margin_bottom = 29.0
mouse_filter = 0
custom_colors/font_color = Color( 0.921569, 0.929412, 0.913725, 1 )
custom_colors/font_color_shadow = Color( 0.0901961, 0.12549, 0.219608, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "10:30AM"
align = 2
script = ExtResource( 8 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
margin_left = 6.0
margin_top = 6.0
margin_right = 110.0
margin_bottom = 92.0
theme = SubResource( 10 )
script = ExtResource( 52 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 102.0
margin_bottom = 84.0

[node name="TimeZone" type="SpinBox" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 24.0
min_value = -12.0
max_value = 12.0
align = 2
suffix = "GMT"

[node name="TimeMode" type="OptionButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 100.0
margin_bottom = 46.0
text = "Time"

[node name="NextAction" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 68.0
focus_mode = 0
enabled_focus_mode = 0
text = "Next"

[node name="Outside" type="Sprite" parent="."]
position = Vector2( -54, 34 )
z_index = -1
texture = ExtResource( 5 )

[node name="Cafe" type="Node2D" parent="."]

[node name="Bg" type="Sprite" parent="Cafe"]
z_index = -1
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Cafe"]
current = true

[node name="Node2D" type="Node2D" parent="Cafe"]

[node name="Sprite6" type="Sprite" parent="Cafe/Node2D"]
visible = false
position = Vector2( 35, -48 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 13 )

[node name="Sprite5" type="Sprite" parent="Cafe/Node2D"]
position = Vector2( 0, -51 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 13 )

[node name="HangingPlant2" type="Sprite" parent="Cafe/Node2D"]
position = Vector2( -42, -48 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Objects" type="YSort" parent="Cafe"]

[node name="BlackCat" parent="Cafe/Objects" instance=ExtResource( 18 )]

[node name="Maia" parent="Cafe/Objects" instance=ExtResource( 15 )]

[node name="Elveira" parent="Cafe/Objects" instance=ExtResource( 9 )]

[node name="Chie" parent="Cafe/Objects" instance=ExtResource( 51 )]

[node name="Yuuki" parent="Cafe/Objects" instance=ExtResource( 17 )]

[node name="Counter" type="Sprite" parent="Cafe/Objects"]
position = Vector2( -60, 33 )
texture = ExtResource( 1 )
offset = Vector2( 0, -20 )

[node name="Tree" type="Sprite" parent="Cafe/Objects"]
position = Vector2( 1, 27 )
texture = ExtResource( 14 )
centered = false
offset = Vector2( 0, -100 )

[node name="Plant5" type="Sprite" parent="Cafe/Objects"]
position = Vector2( -80, 75 )
scale = Vector2( 0.524057, 0.524057 )
texture = ExtResource( 11 )
offset = Vector2( 0, -16 )

[node name="Plant" type="Sprite" parent="Cafe/Objects"]
position = Vector2( 97, 67 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )

[node name="Plant2" type="Sprite" parent="Cafe/Objects"]
position = Vector2( -98, 63 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )
offset = Vector2( 0, -23 )

[node name="Plant3" type="Sprite" parent="Cafe/Objects"]
position = Vector2( -54, 35 )
scale = Vector2( 0.466667, 0.466667 )
texture = ExtResource( 6 )
offset = Vector2( 0, -20 )

[node name="Plant4" type="Sprite" parent="Cafe/Objects"]
position = Vector2( 77, 10 )
scale = Vector2( 0.466667, 0.466667 )
texture = ExtResource( 6 )

[node name="TableSet" type="Node2D" parent="Cafe/Objects"]
position = Vector2( 39, 24 )
scale = Vector2( 0.9, 0.9 )

[node name="Chair6" type="Sprite" parent="Cafe/Objects/TableSet"]
position = Vector2( 19.1111, -2.66667 )
texture = ExtResource( 12 )

[node name="Table3" type="Sprite" parent="Cafe/Objects/TableSet"]
texture = ExtResource( 2 )

[node name="Chair5" type="Sprite" parent="Cafe/Objects/TableSet"]
position = Vector2( -19, 1.77778 )
texture = ExtResource( 10 )

[node name="NightToggle" type="Node" parent="Cafe/Objects/TableSet"]
script = ExtResource( 16 )

[node name="TableSet2" type="Node2D" parent="Cafe/Objects"]
position = Vector2( 59, 69 )

[node name="Chair4" type="Sprite" parent="Cafe/Objects/TableSet2"]
position = Vector2( 16, -11 )
texture = ExtResource( 12 )

[node name="Table2" type="Sprite" parent="Cafe/Objects/TableSet2"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
offset = Vector2( 0, -10 )

[node name="Chair3" type="Sprite" parent="Cafe/Objects/TableSet2" groups=["toggle", "toggle:sit"]]
position = Vector2( -15, -11 )
texture = ExtResource( 10 )

[node name="NightToggle" type="Node" parent="Cafe/Objects/TableSet2"]
script = ExtResource( 16 )

[node name="TableSet3" type="Node2D" parent="Cafe/Objects"]
position = Vector2( -57, 66 )

[node name="Chair2" type="Sprite" parent="Cafe/Objects/TableSet3"]
position = Vector2( 8, -11 )
texture = ExtResource( 12 )

[node name="Table" type="Sprite" parent="Cafe/Objects/TableSet3"]
position = Vector2( 0, -10 )
texture = ExtResource( 2 )

[node name="Chair" type="Sprite" parent="Cafe/Objects/TableSet3"]
position = Vector2( -12, -8 )
texture = ExtResource( 10 )

[node name="NightToggle" type="Node" parent="Cafe/Objects/TableSet3"]
script = ExtResource( 16 )

[node name="TableSet4" type="Node2D" parent="Cafe/Objects"]
visible = false
position = Vector2( 39, 24 )
scale = Vector2( 0.9, 0.9 )

[node name="Chair6" type="Sprite" parent="Cafe/Objects/TableSet4"]
position = Vector2( 10, -15 )
texture = ExtResource( 12 )
flip_v = true

[node name="Table3" type="Sprite" parent="Cafe/Objects/TableSet4"]
texture = ExtResource( 2 )

[node name="Chair5" type="Sprite" parent="Cafe/Objects/TableSet4"]
position = Vector2( -15, -15 )
texture = ExtResource( 10 )
flip_v = true

[node name="NightToggle" type="Node" parent="Cafe/Objects/TableSet4"]
script = ExtResource( 16 )
night = true

[node name="TableSet5" type="Node2D" parent="Cafe/Objects"]
visible = false
position = Vector2( 61, 59 )

[node name="Chair4" type="Sprite" parent="Cafe/Objects/TableSet5"]
position = Vector2( 8, -15 )
texture = ExtResource( 12 )
flip_v = true

[node name="Table2" type="Sprite" parent="Cafe/Objects/TableSet5"]
texture = ExtResource( 2 )

[node name="Chair3" type="Sprite" parent="Cafe/Objects/TableSet5"]
position = Vector2( -6, -15 )
texture = ExtResource( 10 )
flip_v = true

[node name="NightToggle" type="Node" parent="Cafe/Objects/TableSet5"]
script = ExtResource( 16 )
night = true

[node name="TableSet6" type="Node2D" parent="Cafe/Objects"]
visible = false
position = Vector2( -60, 59 )

[node name="Chair2" type="Sprite" parent="Cafe/Objects/TableSet6"]
position = Vector2( 13, -15 )
texture = ExtResource( 12 )
flip_v = true

[node name="Table" type="Sprite" parent="Cafe/Objects/TableSet6"]
texture = ExtResource( 2 )

[node name="Chair" type="Sprite" parent="Cafe/Objects/TableSet6"]
position = Vector2( -6, -15 )
texture = ExtResource( 10 )
flip_v = true

[node name="NightToggle" type="Node" parent="Cafe/Objects/TableSet6"]
script = ExtResource( 16 )
night = true

[node name="Catbed" type="Sprite" parent="Cafe/Objects"]
position = Vector2( -81, 34 )
texture = ExtResource( 40 )

[node name="Lamps" type="Node2D" parent="Cafe"]
z_index = 1

[node name="HangingPlant" type="Sprite" parent="Cafe/Lamps"]
position = Vector2( -84, -60 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Cafe/Lamps"]
position = Vector2( -63, -58 )
texture = ExtResource( 13 )

[node name="Sprite3" type="Sprite" parent="Cafe/Lamps"]
visible = false
position = Vector2( 0, -52 )
texture = ExtResource( 13 )

[node name="Sprite4" type="Sprite" parent="Cafe/Lamps"]
position = Vector2( 62, -58 )
texture = ExtResource( 13 )

[connection signal="gui_input" from="CanvasLayer/Label" to="CanvasLayer/Label" method="_on_Label_gui_input"]
